# fabricaClass

./: .env.exemplo  .gitignore  README.md  docker-compose.yml  pyproject.toml
FabricaClass/migrations/: 0006_remove_criterios_booleano_remove_criterios_numerico_and_more.py  0007_pergunta_descricao.py  0008_alter_criterios_descricao_alter_pergunta_descricao.py  0009_curso_curso_formulario_data_fim_and_more.py  0010_remove_formulario_pergunta_remove_pergunta_criterio_and_more.py
FabricaClass/models/: criterios.py  curso.py  formulario.py  pergunta.py  respostas.py
FabricaClass/paginations/: __init__.py  pagination.py
FabricaClass/serializers/: __init__.py  criterios.py  curso.py  formulario.py  pergunta.py  respostas.py  turma.py
FabricaClass/use_cases/: send_email.py
FabricaClass/utils/: pieGraph.py
FabricaClass/views/: criterios.py  curso.py  email.py  formulario.py  pergunta.py  respostas.py  turma.py
apps/fabrica_class/: apps.py
apps/fabrica_class/migrations/: 0001_initial.py  0002_initial.py
apps/fabrica_class/models/: curso.py  formulario.py  pergunta.py  respostas.py  turma.py
apps/fabrica_class/paginations/: __init__.py  pagination.py
apps/fabrica_class/serializers/: criterios.py  curso.py  formulario.py  turma.py  (+2 more)
apps/uploader/: admin.py  apps.py  router.py  views.py
apps/usuario/: admin.py  apps.py  models.py  router.py  serializer.py  views.py
core/: settings.py  urls.py
usuario/: admin.py  models.py  serializer.py  views.py
usuario/migrations/: 0006_remove_usuario_telefone.py
usuario/utils/: cadastro.py  login.py  newPassword.py
(+17 files in other folders)
